--- a/src/app/sign/signin/signin.html
+++ b/src/app/sign/signin/signin.html
@@ -4,18 +4,18 @@
     <img class="egobie-sign-logo" alt=""/>
     <div class="egobie-sign-company">eGobie Car Services</div>
     <ion-item class="egobie-sign-input" style="margin-top: 50px;">
-      <ion-icon ios="md-person" md="md-person"></ion-icon>
+      <ion-icon name="person"></ion-icon>
       <input type="text" placeholder="Username" minlength="1" maxlength="16"/>
     </ion-item>
     <ion-item class="egobie-sign-input" style="margin-top: 10px;">
-      <ion-icon ios="md-lock" md="md-lock"></ion-icon>
+      <ion-icon name="lock"></ion-icon>
       <input type="password" placeholder="Password" minlength="1" maxlength="16"/>
     </ion-item>
 
     <button ion-button outline class="egobie-sign-button">Sign In</button>
     <ion-item class="egobie-sign-link">
       <a class="egobie-left">Forget Password</a>
-      <a class="egobie-right" ui-sref="sign.up">Sign Up</a>
+      <a class="egobie-right" (click)="signUp($event)">Sign Up</a>
     </ion-item>
   </ion-list>
 </ion-scroll>
