--- a/src/app/sign/signin/signin.html
+++ b/src/app/sign/signin/signin.html
@@ -14,7 +14,7 @@
 
     <button ion-button outline class="egobie-sign-button">Sign In</button>
     <ion-item class="egobie-sign-link">
-      <a class="egobie-left">Forget Password</a>
+      <a class="egobie-left" (click)="resetPassword($event)">Forget Password</a>
       <a class="egobie-right" (click)="signUp($event)">Sign Up</a>
     </ion-item>
   </ion-list>
