--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,4 @@
-<!--
-<ion-menu [content]="content">
+<ion-menu id="egobie-menu" side="left" [content]="content">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu</ion-title>
@@ -8,14 +7,13 @@
 
   <ion-content>
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
+      <button menuClose ion-item><i class="fa fa-camera-retro fa-5x"></i>Menu Item 1</button>
+      <button menuClose ion-item>Menu Item 2</button>
+      <button menuClose ion-item>Menu Item 3</button>
     </ion-list>
   </ion-content>
 
 </ion-menu>
--->
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
 <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
